feat: enhance project configuration and auto-configuration
- Update pom.xml with additional dependencies for new serialization formats
- Enhance EdaAutoConfiguration.java with improved bean registration and
  conditional configuration for new components
- Add support for Avro and Protobuf serializers in auto-configuration
- Improve error handler registry configuration

These changes extend the auto-configuration capabilities and add support
for new serialization formats and error handling strategies.

--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,31 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- Serialization Dependencies (Optional) -->
+        <!-- Apache Avro for binary serialization -->
+        <dependency>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro</artifactId>
+            <version>1.11.3</version>
+            <optional>true</optional>
+        </dependency>
+
+        <!-- Google Protocol Buffers for binary serialization -->
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.25.1</version>
+            <optional>true</optional>
+        </dependency>
+
+        <!-- Protocol Buffers JSON utilities -->
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java-util</artifactId>
+            <version>3.25.1</version>
+            <optional>true</optional>
+        </dependency>
+
 
         <!-- Test Dependencies -->
         <dependency>
