test: update tests for new configuration and features
- Update aspect integration tests:
  - Update EventPublisherAspectIntegrationTest with new config class names
  - Update PublishResultAspectIntegrationTest for refactored configuration

- Update configuration tests:
  - Update EdaAutoConfigurationTest to use FireflyEdaAutoConfiguration
  - Adjust test assertions for new configuration structure

- Update integration tests:
  - Update KafkaIntegrationTest with new configuration
  - Update RabbitMqIntegrationTest with new configuration
  - Update consumer integration tests for both Kafka and RabbitMQ

- Update EventListenerProcessorTest:
  - Add tests for dynamic listener registration
  - Update existing tests for enhanced processor capabilities

- Update test properties:
  - Add new test configuration options
  - Update property names to match new configuration structure

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,5 +1,7 @@
 # Test configuration for EDA library integration tests
 firefly.eda.enabled=true
+firefly.eda.publishers.enabled=true
+firefly.eda.consumer.enabled=true
 firefly.eda.publishers.application-event.enabled=true
 
 # AWS Configuration (required for Spring Cloud AWS auto-configuration)
