test: enable all EDA transports explicitly in test configuration

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -3,6 +3,10 @@ firefly.eda.enabled=true
 firefly.eda.publishers.enabled=true
 firefly.eda.consumer.enabled=true
 firefly.eda.publishers.application-event.enabled=true
+firefly.eda.publishers.kafka.default.enabled=true
+firefly.eda.publishers.rabbitmq.default.enabled=true
+firefly.eda.consumer.kafka.default.enabled=true
+firefly.eda.consumer.rabbitmq.default.enabled=true
 
 # AWS Configuration (required for Spring Cloud AWS auto-configuration)
 cloud.aws.region.static=us-east-1
